# tgdump

./: .gitignore  Makefile  communication.py  config.json  config.py  config_2.json  handlers.py  helpers.py  main.py  pyproject.toml  summarizer.py  telegram_bot.py  tgdump.py
prompts/: summarization_prompt.txt
src/: __init__.py  communication.py  config.py  handlers.py  helpers.py  sbertprocessor.py  summarizer.py  tgdump.py
