[tool.poetry]
name = "python-tdlib"
version = "0.1.0"
description = ""
authors = ["vladislav.vasilenko <vladislav.vasilenko@glowbyteconsulting.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.2"
pydantic-settings = "^2.6.1"
aiotdlib = "^0.24.3"
transformers = "^4.46.3"
torch = "^2.5.1"
sentence-transformers = "^3.3.1"
langchain = "^0.3.9"
langchain-anthropic = "^0.3.0"
telebot = "^0.0.5"
telethon = "^1.38.1"
schedule = "^1.2.2"
aioschedule = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
